Use sonarCloud to fixed bug